<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navbar_menu_today"
        android:title="@string/today"
        android:contentDescription="@string/today"
        android:icon="@drawable/menu_navbar_today"/>
    <item
        android:id="@+id/navbar_menu_habits"
        android:title="@string/habits"
        android:contentDescription="@string/habits"
        android:icon="@drawable/menu_navbar_habits"/>
    <item
        android:id="@+id/navbar_menu_events"
        android:title="@string/events"
        android:contentDescription="@string/events"
        android:icon="@drawable/menu_navbar_events"/>
    <item
        android:id="@+id/navbar_menu_social"
        android:title="@string/social"
        android:contentDescription="@string/social"
        android:icon="@drawable/menu_navbar_social"/>
    <item
        android:id="@+id/navbar_menu_profile"
        android:title="@string/profile"
        android:contentDescription="@string/profile"
        android:icon="@drawable/menu_navbar_profile"/>
</menu>