<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".social.SocialViewHabit">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/social_view_habit_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:title="View Habit"
            app:titleTextColor="@android:color/white"/>
    </com.google.android.material.appbar.AppBarLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:text="Name"
        android:textColor="?android:textColorPrimary" />

    <TextView
        android:id="@+id/social_habit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_black"
        android:text="Sameple Habit Name"
        android:textColor="?android:textColorPrimary"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:text="Reason"
        android:textColor="?android:textColorPrimary" />

    <TextView
        android:id="@+id/social_habit_reason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_black"
        android:text="Sample Habit Reason"
        android:textColor="?android:textColorPrimary"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:text="Start Date: "
        android:textColor="?android:textColorPrimary" />

    <TextView
        android:id="@+id/social_habit_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_black"
        android:text="Sample Start Date"
        android:textColor="?android:textColorPrimary"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:text="Frequency"
        android:textColor="?android:textColorPrimary" />

    <include layout="@layout/weekdays_buttons" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/social_habit_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_black"
                android:text="@string/habit_overview"
                android:textColor="?android:textColorPrimary"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/social_view_habit_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/social_habit_overview"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/total_events_completed"
                    android:textColor="?android:textColorPrimary" />

                <TextView
                    android:id="@+id/social_view_total_events"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/roboto_black"
                    android:text="0"
                    android:textColor="?android:textColorPrimary" />

            </LinearLayout>

            <TextView
                android:id="@+id/social_habit_30_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/social_view_habit_ll"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_black"
                android:text="@string/_30_day_streak"
                android:textColor="?android:textColorPrimary" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/social_habit_30_day"
                android:orientation="horizontal">

                <com.google.android.material.progressindicator.LinearProgressIndicator
                    android:id="@+id/social_view_habit_progress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="60dp"
                    android:paddingTop="7dp"
                    app:layout_constraintBaseline_toBottomOf="parent" />

                <TextView
                    android:id="@+id/social_view_habit_streak"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/roboto"
                    android:text="0/30"
                    app:layout_constraintBaseline_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/social_view_habit_progress" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/social_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/social_habit_30_day"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/social_habit_best_streak"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/roboto_black"
                    android:text="@string/best_streak"
                    android:textColor="?android:textColorPrimary" />

                <TextView
                    android:id="@+id/social_best_streak_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/roboto"
                    android:text="0"
                    android:textColor="?android:textColorPrimary" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/best_streak_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/social_ll"
                android:layout_marginTop="-16dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/social_streak_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="Nov 21, 2021"
                    android:textColor="?android:textColorPrimary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/social_best_streak_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="Nov 24, 2021"
                    android:textColor="?android:textColorPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/social_streak_line"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/social_streak_line"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="2dp"
                    android:background="?colorPrimary"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintEnd_toStartOf="@id/social_best_streak_end"
                    app:layout_constraintStart_toEndOf="@+id/social_streak_start"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>